Yet another JNDI fix/workaround