@@ -14,7 +14,7 @@
     <description>Test suite for the JQM engine + service</description>
 
     <properties>
-        <argLine>-Xms256m -Xmx1024m -XX:MaxMetaspaceSize=512m</argLine>
+        <argLine>-Xms256m -Xmx1024m -XX:MaxMetaspaceSize=512m --add-opens java.naming/javax.naming.spi=ALL-UNNAMED</argLine>
     </properties>
 
     <build>
